--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,9 +4,9 @@ do.depend=false
 do.jar=true
 do.jlink=false
 file.reference.jsr173_1.0_api.jar=/home/artis/baboud/monitorat/apo/TP/TP_12/fichiers/jsr173_1.0_api.jar
-file.reference.jsr173_1.0_api.jar-1=C:\\Users\\gmultari\\Downloads\\Portage-Java-v0\\Portage-Java-v0\\libs\\jsr173_1.0_api.jar
-file.reference.jsr173_1.0_ri.jar=C:\\Users\\gmultari\\Downloads\\Portage-Java-v0\\Portage-Java-v0\\libs\\jsr173_1.0_ri.jar
+file.reference.jsr173_1.0_api.jar-1=C:\\Users\\Benhadj\\Documents\\NetBeansProjects\\PortageJava2\\libs\\jsr173_1.0_api.jar
+file.reference.jsr173_1.0_ri.jar=C:\\Users\\Benhadj\\Documents\\NetBeansProjects\\PortageJava2\\libs\\jsr173_1.0_ri.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\gmultari\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\Benhadj\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
