--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,4 @@ file.reference.jsr173_1.0_ri.jar=C:\\Users\\Benhadj\\Documents\\NetBeansProjects
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Benhadj\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=D:\\users\\gmultari\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
