--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ run.jvmargs=
 javadoc.encoding=
 javac.classpath=\
     ${file.reference.jsr173_1.0_api.jar-1}:\
-    ${file.reference.jsr173_1.0_ri.jar}
+    ${file.reference.jsr173_1.0_ri.jar}:\
+    ${libs.swing-layout.classpath}
 run.test.modulepath=\
     ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
