--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ javac.compilerargs=
 javadoc.noindex=false
 javadoc.private=false
 javadoc.author=false
-main.class=princetonPlainsboro.Test
+main.class=princetonPlainsboro.MainWindow
 junit.selected.version=3
 javac.source=1.7
 includes=**
