--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 endorsed.classpath=
 #Tue May 25 14:13:07 CEST 2021
 excludes=
+file.reference.swing-layout-1.0.4.jar=C:\\Users\\Benhadj\\Documents\\NetBeansProjects\\swing-layout-1.0.4.jar
 javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
@@ -33,7 +34,7 @@ javadoc.private=false
 javadoc.author=false
 main.class=princetonPlainsboro.ui.MainWindow
 junit.selected.version=3
-javac.source=1.7
+javac.source=1.8
 includes=**
 javadoc.use=true
 jar.compress=false
@@ -51,7 +52,8 @@ javadoc.encoding=
 javac.classpath=\
     ${file.reference.jsr173_1.0_api.jar-1}:\
     ${file.reference.jsr173_1.0_ri.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.swing-layout-1.0.4.jar}
 run.test.modulepath=\
     ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
@@ -69,7 +71,7 @@ application.title=PortageJavaV0
 javac.test.modulepath=\
     ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
-javac.target=1.7
+javac.target=1.8
 platform.active=default_platform
 manifest.file=manifest.mf
 run.test.classpath=\
