login + filtres + sort

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 endorsed.classpath=
 #Tue May 25 14:13:07 CEST 2021
 excludes=
+file.reference.swing-layout-1.0.2.jar=D:\\users\\gmultari\\Downloads\\swing-layout-1.0.2.jar
 file.reference.swing-layout-1.0.4.jar=C:\\Users\\Benhadj\\Documents\\NetBeansProjects\\swing-layout-1.0.4.jar
 javac.external.vm=false
 javac.processorpath=\
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.jsr173_1.0_api.jar-1}:\
     ${file.reference.jsr173_1.0_ri.jar}:\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.swing-layout-1.0.4.jar}
+    ${file.reference.swing-layout-1.0.4.jar}:\
+    ${file.reference.swing-layout-1.0.2.jar}
 run.test.modulepath=\
     ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
